# tcp-server-client

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  multithreadClient.cpp  multithreadServer.cpp  pollServer.cpp  server.cpp
basic-blocking/: CMakeLists.txt  client.cpp
multi-threaded/: CMakeLists.txt  multithreadServer.cpp
poll-based/: CMakeLists.txt  pollServer.cpp
